--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,14 @@
     <title>Hungry App</title>
   </head>
   <body>
-    <script
+    <!-- <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8Ft9_0KtBRqn7_QWi06CaxjtMe824ufc&libraries=places&callback=initMap">
+    </script> -->
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8Ft9_0KtBRqn7_QWi06CaxjtMe824ufc&libraries=places">
     </script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
